初定 订单列表权限 问题
接下来进行 订单编辑功能的编写


Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -3,7 +3,7 @@
 
 {% block content %}
         <div class="pWhite">
-        <form action="/order/cartsub/" method="post" name="to_checkout" id="toCheckout">
+        <form action="/order/submit/" method="post" name="to_checkout" id="toCheckout">
              <h3>订单状态</h3>
             <table width="100%" class="mBottom10">
                 <tr>
