--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-        <form action="/order/adminsub/" method="POST" name="newOrder" id="checkout">
+        <form action="/order/add/" method="POST" name="newOrder" id="checkout">
           <h3>商品列表</h3>
           <table width="100%" cellpadding="3" cellspacing="1" class="sortTable">
             <thead>
