--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -22,7 +22,7 @@
             <th>类型</th>
             <th width="80px">订单编号</th>
             <th>收货时间</th>
-            <th>地址</th>
+            <th>联系人</th>
             <th>金额</th>
             <th>预发货</th>
             <th>物流</th>
@@ -32,20 +32,36 @@
           </thead>
           <tbody>
 {% for i in oList %}
-          <tr align="center">
+          <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_orderType_display }}</td>
             <td><a href="/order/{{ i.orderSn }}/">{{ i.orderSn }}</a></td>
             <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
-            <td><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
+            <td>{{ i.orderlogistics.consignee }} [ {{ i.orderlogistics.tel }} ]</td>
             <td>189.00</td>
             <td>15:00 + 30m</td>
             <td>吴</td>
             <td>{{ i.orderstatus.get_orderStatus_display }} | {{ i.orderpay.get_payStatus_display }} | {{ i.ordership.get_shipStatus_display }}</td>
             <td nowrap="nowrap">
 {% for v,ii in i.action %}
-           <a href="/logistics/ccon/{{ v }}/?sn={{ i.orderSn }}">{{ ii }}</a>
+           <a href="/logistics/ccon/{{ v }}/?sn={{ i.orderSn }}" class="button">{{ ii }}</a>
 {% endfor %}
             </td>
+          </tr>
+{% for item in i.orderitem_set.all %}
+          <tr align="center">
+            <td align="right" nowrap="true" colspan="5">{{ item.name }}</td>
+            <td>{{ item.spec }}</td>
+            <td>{{ item.number }}</td>
+            <td>未产</td>
+            <td><a href="/a/" class="button">生产请求</a></td>
+          </tr>
+{% endfor %}
+          <tr>
+            <td align="center">地址</td>
+            <td colspan="8"><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
+          </tr>          <tr>
+            <td align="center">备注</td>
+            <td colspan="8">速度送</td>
           </tr>
 {% endfor %}
           </tbody>
