订单管理UI 修改
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -20,14 +20,14 @@
         <thead>
           <tr>
             <th>类型</th>
-            <th width="80px">订单编号</th>
+            <th>订单编号</th>
             <th>收货时间</th>
             <th>联系人</th>
             <th>金额</th>
             <th>预发货</th>
             <th>物流</th>
             <th>状态</th>
-            <th width="50px">操作</th>
+            <th>操作</th>
           </tr>
           </thead>
           <tbody>
