--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -19,33 +19,46 @@
       <table cellpadding="3" cellspacing="1" width="100%" class="sortTable">
         <thead>
           <tr>
-            <th>来源</th>
+            <th>类型</th>
             <th width="80px">订单编号</th>
             <th>收货时间</th>
             <th>收货人</th>
             <th>电话</th>
-            <th>地址</th>
-            <th>类型</th>
+            <th>来源</th>
             <th>订单状态</th>
             <th width="50px">操作</th>
           </tr>
           </thead>
           <tbody>
 {% for i in oList %}
-          <tr align="center">
+          <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_orderType_display }}</td>
             <td><a href="/order/{{ i.orderSn }}/">{{ i.orderSn }}</a></td>
             <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
             <td>{{ i.orderlogistics.consignee }}</td>
             <td>{{ i.orderlogistics.tel }}</td>
-            <td><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
             <td>{{ i.referer }}</td>
             <td>{{ i.orderstatus.get_orderStatus_display }} | {{ i.orderpay.get_payStatus_display }} | {{ i.ordership.get_shipStatus_display }}</td>
             <td nowrap="nowrap">
 {% for v,ii in i.action %}
-           <a href="/order/ccon/{{ v }}/?sn={{ i.orderSn }}">{{ ii }}</a>
+           <a href="/order/ccon/{{ v }}/?sn={{ i.orderSn }}" class="button">{{ ii }}</a>
 {% endfor %}
             </td>
+          </tr>
+{% for item in i.orderitem_set.all %}
+          <tr align="center">
+            <td align="right" nowrap="true" colspan="5">{{ item.name }}</td>
+            <td>{{ item.spec }}</td>
+            <td>{{ item.number }}</td>
+            <td></td>
+          </tr>
+{% endfor %}
+          <tr>
+            <td align="center">地址</td>
+            <td colspan="8"><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
+          </tr>          <tr>
+            <td align="center">备注</td>
+            <td colspan="8">速度送</td>
           </tr>
 {% endfor %}
           </tbody>
