生产管理定稿
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/produce/templates/produceui.htm
+++ b/produce/templates/produceui.htm
@@ -33,37 +33,7 @@
           </tr>
           <tr align="center">
             <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 18:00</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>          
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 18:00</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>          
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 18:00</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>          
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 18:00</td>
+            <td>18:00 | - 30 m</td>
             <td>1</td>
             <td>产中</td>
             <td>
@@ -71,47 +41,29 @@
               <a href="/production/" class="button">停产</a>
             </td>
           </tr>
-          <tr align="center" class="tr_border_top_black">
-            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-            <td>套</td>
-            <td>&nbsp;</td>
-            <td style="color:red">6</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+          <tr align="center">
+            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
+            <td>18:00 | 0 m</td>
+            <td>1</td>
+            <td>产中</td>
+            <td>
+              <a href="/production/" class="button">完成</a>
+              <a href="/production/" class="button">停产</a>
+            </td>
           </tr>
           <tr align="center">
             <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 | 18:00</td>
+            <td>18:00 | + 30 m</td>
             <td>1</td>
             <td>产中</td>
             <td>
               <a href="/production/" class="button">完成</a>
               <a href="/production/" class="button">停产</a>
             </td>
-          </tr>          
+          </tr>
           <tr align="center">
             <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 | 18:00</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>          
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 | 18:00</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>          
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>2013-06-04 | 18:00</td>
+            <td>18:00 | + 30 m</td>
             <td>1</td>
             <td>产中</td>
             <td>
@@ -122,7 +74,6 @@
       </table>
       <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
-            <th>订单</th>
             <th>名称</th>
             <th>规格</th>
             <th>数量</th>
@@ -130,10 +81,13 @@
             <th>操作</th>
           </tr>
           <tr class="tr_border_top_black">
-            <td colspan="10">2013-06-04 | 18:00 - 19:00 [ 30m ]</td>
+            <td colspan="10">18:00 | - 30 m</td>
+          </tr>
+          <tr>
+            <td colspan="4">2013702504723</td>
+            <td></td>
           </tr>
           <tr align="center">
-            <td>2013702504722</td>
             <td>德国烤奶酪</td>
             <td>1.5磅：约18×18(cm)</td>
             <td>1</td>
@@ -144,7 +98,20 @@
             </td>
           </tr>
           <tr align="center">
-            <td>2013702504723</td>
+            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
+            <td>套</td>
+            <td>1</td>
+            <td>产中</td>
+            <td>
+              <a href="/production/" class="button">完成</a>
+              <a href="/production/" class="button">停产</a>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">2013702504723</td>
+            <td></td>
+          </tr>
+          <tr align="center">
             <td>德国烤奶酪</td>
             <td>1.5磅：约18×18(cm)</td>
             <td>1</td>
@@ -155,7 +122,30 @@
             </td>
           </tr>
           <tr align="center">
-            <td>2013702504722</td>
+            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
+            <td>套</td>
+            <td>1</td>
+            <td>产中</td>
+            <td>
+              <a href="/production/" class="button">完成</a>
+              <a href="/production/" class="button">停产</a>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">2013702504723</td>
+            <td></td>
+          </tr>
+          <tr align="center">
+            <td>德国烤奶酪</td>
+            <td>1.5磅：约18×18(cm)</td>
+            <td>1</td>
+            <td>产中</td>
+            <td>
+              <a href="/production/" class="button">完成</a>
+              <a href="/production/" class="button">停产</a>
+            </td>
+          </tr>
+          <tr align="center">
             <td>生日套装(生日牌/冷烟花/蜡烛)</td>
             <td>套</td>
             <td>1</td>
@@ -166,10 +156,27 @@
             </td>
           </tr>
           <tr class="tr_border_top_black">
-            <td colspan="10">2013-06-04 | 19:00 - 20:00 [ 60m ]</td>
+            <td colspan="10">18:00 | 0 m</td>
+          </tr>
+          <tr>
+            <td colspan="4">2013702504722</td>
+            <td></td>
           </tr>
           <tr align="center">
-            <td>2013702504722</td>
+            <td>德国烤奶酪</td>
+            <td>1.5磅：约18×18(cm)</td>
+            <td>1</td>
+            <td>产中</td>
+            <td>
+              <a href="/production/" class="button">完成</a>
+              <a href="/production/" class="button">停产</a>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">2013702504724</td>
+            <td></td>
+          </tr>
+          <tr align="center">
             <td>德国烤奶酪</td>
             <td>1.5磅：约18×18(cm)</td>
             <td>1</td>
@@ -180,18 +187,6 @@
             </td>
           </tr>
           <tr align="center">
-            <td>2013702504723</td>
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td>2013702504722</td>
             <td>生日套装(生日牌/冷烟花/蜡烛)</td>
             <td>套</td>
             <td>1</td>
