--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -17,29 +17,20 @@
           </form>
       </div>
       <table cellpadding="3" cellspacing="1" width="100%" class="sortTable">
-        <thead>
           <tr>
             <th>类型</th>
             <th>订单编号</th>
-            <th>收货时间</th>
             <th>联系人</th>
             <th>金额</th>
-            <th>预出货</th>
-            <th>物流</th>
             <th>状态</th>
             <th>操作</th>
           </tr>
-          </thead>
-          <tbody>
 {% for i in oList %}
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_orderType_display }}</td>
             <td><a href="/order/{{ i.orderSn }}/">{{ i.orderSn }}</a></td>
-            <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
             <td>{{ i.orderlogistics.consignee }} [ {{ i.orderlogistics.tel }} ]</td>
             <td>189.00</td>
-            <td>{{ i.orderlogistics.logisTimeStart|time:"H:i" }} - {{ i.orderlogistics.logisTimeEnd|time:"H:i" }} | {{ i.orderlogistics.get_advance_display }}</td>
-            <td>吴</td>
             <td>{{ i.orderstatus.get_orderStatus_display }} | {{ i.orderpay.get_payStatus_display }} | {{ i.ordership.get_shipStatus_display }}</td>
             <td nowrap="nowrap">
 {% for v,ii in i.action %}
@@ -49,7 +40,7 @@
           </tr>
 {% for item in i.orderitem_set.all %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="5">{{ item.name }}</td>
+            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
             <td>{{ item.number }}</td>
             <td>未产</td>
@@ -58,13 +49,33 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="8"><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
-          </tr>          <tr>
-            <td align="center">备注</td>
-            <td colspan="8">速度送</td>
+            <td colspan="5"><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
           </tr>
+          <tr align="center">
+            <td>时间</td>
+            <td align="left">{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
+            <td>预发货</td>
+            <td>{{ i.orderlogistics.logisTimeStart|time:"H:i" }}</td>
+            <td>
+              <select class="dis" id="d{{ i.orderSn }}" name="disID">
+                <option value="0" selected="selected">0 m</option>
+                <option value="1">+ 30 m</option>
+                <option value="2">+ 60 m</option>
+                <option value="3">+ 90 m</option>
+              </select>
+            </td>
+            <td>              
+              <select class="dis" id="s{{ i.orderSn }}" name="s">
+                <option value="1" selected="selected">吴</option>
+                <option value="2">刘</option>
+              </select></td>
+          </tr>             
+          <tr>
+            <td align="center">备注</td>
+            <td colspan="5">速度送</td>
+          </tr>
+
 {% endfor %}
-          </tbody>
           <tr>
             <td align="right" nowrap="true" colspan="11">
               总计 {{ oList.paginator.count }} 条记录，共 {{ oList.paginator.num_pages }} 页，当前第 {{ p }} 页
