--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -51,7 +51,7 @@
             <table width="100%" cellpadding="3" cellspacing="1">
                 <tr>
                   <td width="100px" align="right">订单类型：</td>
-                  <td width="90%">{{ oTypeForm.orderType }}</td>
+                  <td width="90%">{{ oTypeForm.oType }}</td>
                 </tr>
             </table>
         <h3>收货人信息</h3>
