去除 message APP  使用django 自带的
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -110,6 +110,14 @@
     </div>
 {% endblock %}
     <div id="content" class="clearfix">
+        {% if messages %}
+      <div class="pWhite">
+{% for i in messages %}
+          <h3>{{ i.tags }}</h3>
+          <p>{{ i }}</p>
+{% endfor %}
+      </div>
+{% endif %}
 {% block content %}{% endblock %}
     </div>
     <div id="footer">
