--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -146,7 +146,7 @@
 
     <div id="content">
 {% if messages %}
-      <div class="pWhite">
+      <div id="message">
 {% for i in messages %}
           <h3>{{ i.tags }}</h3>
           <p>{{ i }}</p>
