--- a/office/static/office/css/style.css
+++ b/office/static/office/css/style.css
@@ -373,6 +373,7 @@ table td{
   padding:2px 10px;
   height: 22px;
   line-height: 20px;
+  margin-bottom: 2px;
 }
 
 #content .search img,
@@ -393,23 +394,14 @@ table td{
 }
 
 #content #message{
-  background: #EEF8F9;
+  background: #FFF;
   border:1px solid #BBDDE5;
-  margin:10px;
+  margin:10px 0;
   padding:10px;
-}
-
-#content #message p, #content #message h1, #content #message ul{
-  text-align:center;
 }
 
 #content #message p{
   line-height:24px;
-}
-
-#content #message h1{
-  color:#192E32;
-  line-height:40px;
 }
 
 #content center{
