--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -26,7 +26,6 @@
             <th>电话</th>
             <th>来源</th>
             <th>订单状态</th>
-            <th width="50px">操作</th>
           </tr>
           </thead>
           <tbody>
@@ -37,30 +36,31 @@
             <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
             <td>{{ i.orderlogistics.consignee }}</td>
             <td>{{ i.orderlogistics.tel }}</td>
-            <td>{{ i.referer }}</td>
+            <td>{{ i.referer }} [ {{i.orderpay.payName}} ]</td>
             <td>{{ i.orderstatus.get_orderStatus_display }} | {{ i.orderpay.get_payStatus_display }} | {{ i.ordership.get_shipStatus_display }}</td>
-            <td nowrap="nowrap">
-{% for v,ii in i.action %}
-           <a href="/order/ccon/{{ v }}/?sn={{ i.orderSn }}" class="button">{{ ii }}</a>
-{% endfor %}
-            </td>
           </tr>
 {% for item in i.orderitem_set.all %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="3">{{ item.name }}</td>
+            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
             <td>{{ item.number }}</td>
             <td>{{ item.amount }}</td>
             <td>{{ item.get_discount_display }}</td>
-            <td></td>
+            <td>{{ item.nowFee }}</td>
           </tr>
 {% endfor %}
           <tr>
             <td align="center">地址</td>
             <td colspan="8"><a href="/map/?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
-          </tr>          <tr>
+          </tr>          
+          <tr>
             <td align="center">备注</td>
-            <td colspan="8">速度送</td>
+            <td colspan="5">速度送</td>
+            <td nowrap="nowrap" align="center">
+{% for v,ii in i.action %}
+           <a href="/order/ccon/{{ v }}/?sn={{ i.orderSn }}" class="button">{{ ii }}</a>
+{% endfor %}
+            </td>
           </tr>
 {% endfor %}
           </tbody>
