完善 订单提交
包含 用户级提示


Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -133,7 +133,7 @@
       <li><a href="/account/logout/">登出</a></li>
     </ul>
     <div id="header">
-        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a> {% if request.element %} <a href="{{ request.element.path }}">{{ request.element.get_path_display }}</a>{% endif %}</div>
+        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{{ request.domElement.path }}">{{ request.domElement.get_path_display }}</a>{% endif %}</div>
         <ul id="toolsBar">
           <li><a href="/order/new/">新订单</a></li>
           <li><a href="/inventory/">库存</a></li>
@@ -153,11 +153,11 @@
 {% endfor %}
       </div>
 {% endif %}
-{% if request.element.pType %}
+{% if request.domElement.pType %}
         <div id="tool">
           <ul class="action">
-{% for i in request.domElement %}
-              <li><a href="{{ i.path }}" class="button">{{ i.name }}</a></li>
+{% for i in request.domElement.sub_set.getDomElement %}
+              <li><a href="{{ i.path }}" class="button">{{ i.get_path_display }}</a></li>
 {% endfor %}
           </ul>
         </div>
