--- a/inventory/templates/inventoryui.htm
+++ b/inventory/templates/inventoryui.htm
@@ -19,37 +19,37 @@
             <td>香浓巧克力</td>
             <td>&nbsp;</td>
             <td><span class="wow_item_1">1</span> | <span class="wow_item_8">6</span> | <span class="wow_item_0">7</span></td>
-            <td>&nbsp;</td>
+            <td><a href="/inventory/" class="button">修正</a></td>
           </tr>
           <tr align="center">
             <td>&nbsp;</td>
             <td>1.5磅：约18×18(cm)</td>
             <td><span class="wow_item_1">0</span> | <span class="wow_item_8">4</span> | <span class="wow_item_0">4</span></td>
-            <td><a href="/inventory/" class="button">修正</a><a href="/inventory/" class="button">删除</a></td>
+            <td><a href="/inventory/" class="button">删除</a></td>
           </tr>
           <tr align="center">
             <td>&nbsp;</td>
             <td>2.5磅：约20×20(cm)</td>
             <td><span class="wow_item_1">1</span> | <span class="wow_item_8">2</span> | <span class="wow_item_0">3</span></td>
-            <td><a href="/inventory/" class="button">修正</a><a href="/inventory/" class="button">删除</a></td>
+            <td><a href="/inventory/" class="button">删除</a></td>
           </tr>
           <tr align="center" class="tr_border_top_black">
             <td>德国烤奶酪</td>
             <td>&nbsp;</td>
             <td><span class="wow_item_1">1</span> | <span class="wow_item_8">6</span> | <span class="wow_item_0">7</span></td>
-            <td>&nbsp;</td>
+            <td><a href="/inventory/" class="button">修正</a></td>
           </tr>
           <tr align="center">
             <td>&nbsp;</td>
             <td>1.5磅：约18×18(cm)</td>
             <td><span class="wow_item_1">0</span> | <span class="wow_item_8">4</span> | <span class="wow_item_0">4</span></td>
-            <td><a href="/inventory/" class="button">修正</a><a href="/inventory/" class="button">删除</a></td>
+            <td><a href="/inventory/" class="button">删除</a></td>
           </tr>
           <tr align="center">
             <td>&nbsp;</td>
             <td>2.5磅：约20×20(cm)</td>
             <td><span class="wow_item_1">1</span> | <span class="wow_item_8">2</span> | <span class="wow_item_0">3</span></td>
-            <td><a href="/inventory/" class="button">修正</a><a href="/inventory/" class="button">删除</a></td>
+            <td><a href="/inventory/" class="button">删除</a></td>
           </tr>
       </table>
 {% endblock %}
