添加物流状态确认功能
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -77,11 +77,11 @@
         </div>
       </li>
       <li>
-        <a href="/reconciliation/" class="nav">财务管理</a>
+        <a href="/finance/" class="nav">财务管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/reconciliation/">订单对账</a></li>
-            <li><a href="/approved/">账单核准</a></li>
+            <li><a href="/finance/">财务</a></li>
+            <li><a href="/finance/">零钱</a></li>
             <li><a href="/reimburse/">退款</a></li>
           </ul>
         </div>
