--- a/office/templates/operate.htm
+++ b/office/templates/operate.htm
@@ -1,7 +1,7 @@
 <td nowrap="nowrap" align="center">
 {% for v,ii in i.action.items %}
 {% for vv,iii in ii %}
-           <a href="{{ v }}ccon/{{ vv }}/?sn={{ i.sn }}" class="button">{{ iii }}</a>
+           <a href="{{ v }}{{ vv }}/?sn={{ i.sn }}" class="button">{{ iii }}</a>
 {% endfor %}
 {% endfor %}
 </td>
