--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -38,20 +38,8 @@
             <td align="left">{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
             <td>预发货</td>
             <td>{{ i.orderlogistics.logisTimeStart|time:"H:i" }}</td>
-            <td>
-              <select class="dis" id="d{{ i.sn }}" name="disID">
-                <option value="0" selected="selected">0 m</option>
-                <option value="1">+ 30 m</option>
-                <option value="2">+ 60 m</option>
-                <option value="3">+ 90 m</option>
-              </select>
-            </td>
-            <td>              
-              <select class="dis" id="s{{ i.sn }}" name="s">
-                <option value="1" selected="selected">吴</option>
-                <option value="2">刘</option>
-              </select>
-            </td>
+            <td>{{ i.form.advance }}</td>
+            <td>{{ i.form.dman }}</td>
           </tr>             
           <tr>
             <td align="center">备注</td>
