新增物料APP 用于管理物料库存
其原理为  定义 商品物料成份 , 根据订单中商品的 下单是预扣除物料.

细节待定 . 初步确定与半成品库存分离为两个不同属性的APP


Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -51,7 +51,8 @@
         <div class="messagePop" style="display:none;">
           <ul>
             <li><a href="{{ request.paths.生产 }}">生产</a></li>
-            <li><a href="{{ request.paths.库存 }}">库存</a></li>
+            <li><a href="{{ request.paths.备货 }}">备货</a></li>
+            <li><a href="{{ request.paths.物料 }}">物料</a></li>
           </ul>
         </div>
       </li>
