--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -26,7 +26,7 @@
             <td>{{ item.spec }}</td>
             <td>{{ item.number }}</td>
             <td>未产</td>
-            <td><a href="/a/" class="button">生产请求</a></td>
+            <td><a href="{{ request.paths.生产 }}" class="button">生产请求</a></td>
           </tr>
 {% endfor %}
           <tr>
