--- a/produce/templates/produceui.htm
+++ b/produce/templates/produceui.htm
@@ -1,200 +1,44 @@
 {% extends "office.base.htm" %}
 
 {% block content %}
-      <div class="search" nowrap="true" colspan="3">
-          <form action="/order/" method="get">
-            <select name="c">
-              <option value="-1" selected>全部</option>
-{% for v,i in oStatus %}
-              <option value="{{ v }}" >{{ i }}</option>
+      {% include 'search.htm' %}
+        <table cellpadding="3" cellspacing="1" width="100%">
+          <tr>
+            <th>名称</th>
+            <th>规格</th>
+            <th>数量</th>
+            <th>状态</th>
+            <th>操作</th>
+          </tr>
+{% for i,v in oList.items %}
+{% for ii,vv in v.items %}
+{% for iii,vvv in vv.items %}
+          <tr class="tr_border_top_black">
+            <td colspan="10">{{ i }} | {{ ii }} | {{ iii }}</td>
+          </tr>
+{% for iiii in vvv %}
+          <tr>
+            <td colspan="4"><a href="{{ request.paths.订单 }}{{ iiii.sn }}/">{{ iiii.sn }}</a></td>
+            <td></td>
+          </tr>
+{% for item in iiii.items %}
+          <tr align="center">
+            <td align="right" nowrap="true">{{ item.name }}</td>
+            <td>{{ item.spec }}</td>
+            <td>{{ item.number }}</td>
+            <td>未产</td>
+            <td>
+{% for itemI, itemV in item.action.items %}
+{% for itemII,itemVV in itemV %}
+           <a href="{{ itemI }}{{ itemII }}/?sn={{ iiii.sn }}" class="button">{{ itemVV }}</a>
 {% endfor %}
-            </select>
-            <input type="text" name="s" size="7" value="{% if s %}{{ s }}{% else %}{% now "Y-m-d" %}{% endif %}" class="date">
-            <input type="text" name="k" size="15" value="{{ k }}" />
-            <input type="submit" value=" 搜索 " class="button" />
-          </form>
-      </div>
-      <table cellpadding="3" cellspacing="1" width="100%">
-          <tr>
-            <th>名称</th>
-            <th>规格</th>
-            <th>时间</th>
-            <th>数量</th>
-            <th>状态</th>
-            <th>操作</th>
-          </tr>
-          <tr align="center" class="tr_border_top_black">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>&nbsp;</td>
-            <td style="color:red">6</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>18:00 | - 30 m</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
+{% endfor %}
             </td>
           </tr>
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>18:00 | 0 m</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>18:00 | + 30 m</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td colspan="2"><a href="/production/?keyword=2013702504722">2013702504722</a> </td>
-            <td>18:00 | + 30 m</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-      </table>
-      <table cellpadding="3" cellspacing="1" width="100%">
-          <tr>
-            <th>名称</th>
-            <th>规格</th>
-            <th>数量</th>
-            <th>状态</th>
-            <th>操作</th>
-          </tr>
-          <tr class="tr_border_top_black">
-            <td colspan="10">18:00 | - 30 m</td>
-          </tr>
-          <tr>
-            <td colspan="4">2013702504723</td>
-            <td></td>
-          </tr>
-          <tr align="center">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-            <td>套</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">2013702504723</td>
-            <td></td>
-          </tr>
-          <tr align="center">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-            <td>套</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">2013702504723</td>
-            <td></td>
-          </tr>
-          <tr align="center">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-            <td>套</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr class="tr_border_top_black">
-            <td colspan="10">18:00 | 0 m</td>
-          </tr>
-          <tr>
-            <td colspan="4">2013702504722</td>
-            <td></td>
-          </tr>
-          <tr align="center">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">2013702504724</td>
-            <td></td>
-          </tr>
-          <tr align="center">
-            <td>德国烤奶酪</td>
-            <td>1.5磅：约18×18(cm)</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-          <tr align="center">
-            <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-            <td>套</td>
-            <td>1</td>
-            <td>产中</td>
-            <td>
-              <a href="/production/" class="button">完成</a>
-              <a href="/production/" class="button">停产</a>
-            </td>
-          </tr>
-      </table>
+{% endfor %}
+{% endfor %}
+{% endfor %}
+{% endfor %}
+{% endfor %}
+        </table>
 {% endblock %}
